zapinating. need magic love on wordlists

--- a/out.html
+++ b/out.html
@@ -1,2 +1,2 @@
-<head><meta charset='utf-8'></head>
-<body>vem de zap, bebe 😀</body>
+<head><meta charset='utf-8'/></head>
+<body>VEM DE ZAP, 😎😁 BEBE, 😃 QUE VAI SER 😛😜 TOP 👌👌 DEMAIS 😝😎☺ </body>
